fix overflow on large title and many artists

--- a/hub-view/src/App.css
+++ b/hub-view/src/App.css
@@ -358,10 +358,13 @@ a:hover{
   margin-top: 1%;
 }
 .songDescription-artists{
-  margin-top: -11%;
-  margin-left: -3px;
+  margin-top: -8%;
+  margin-left: 0px;
   display:flex;
   justify-content: center;
+  overflow-x: auto;
+  flex-wrap: wrap;
+  line-height: 0;
 }
 .songDescription-info {
   text-align: left;
